code committed for some new changes..
